--- a/css/hero.css
+++ b/css/hero.css
@@ -1,6 +1,8 @@
 body{
 	margin: 0;
 	font-family: 'Helvetica', 'Arial', sans-serif;
+	font-size: 20px;
+	line-height: 30px;
 }
 
 header{
@@ -10,12 +12,43 @@ header{
 	padding-bottom: 50px;
 }
 
+h1, h2{
+	font-family: 'Turret Road', cursive;
+}
+
 header h1{
 	color: white;
-
+	font-size: 50px;
 }
 
 header img{
 	border-radius: 150px;
 	border:10px solid #483a94
+}
+
+
+main{
+	max-width: 800px;
+	margin: 0 auto;
+	padding: 0 20px 20px 475px;
+}
+
+main img{
+	max-width: 100%;
+}
+
+h2{
+	font-size: 35px;
+	color: #e70c19;
+}
+
+footer{
+	background-color: red;
+	text-align: center;
+	color: white;
+	padding: 50px;
+}
+
+footer p{
+	margin: 0;
 }
